--- a/iliad_human_aware_navigation/config/object_layer_costmap_bt.yml
+++ b/iliad_human_aware_navigation/config/object_layer_costmap_bt.yml
@@ -8,8 +8,8 @@ publish_frequency: 3.0
 update_frequency: 5.0
 plugins:
   - {name: static_map, type: "costmap_2d::StaticLayer"}
-  - {name: obstacles_laser_floor, type: "costmap_2d::ObstacleLayer"}
-  - {name: obstacles_localized_laser, type: "costmap_2d::ObstacleLayer"}
+  - {name: obstacles_laser, type: "costmap_2d::ObstacleLayer"}
+  - {name: obstacles_3d, type: "costmap_2d::ObstacleLayer"}
 
 static_map:
   track_unknown_space: true
@@ -17,11 +17,11 @@ static_map:
   use_maximum: true
   trinary_costmap: false
 
-obstacles_laser_floor:
+obstacles_laser:
   observation_sources: laserScanner
   laserScanner: {data_type: LaserScan, clearing: true, marking: true, topic: '/robot$(arg robot_id)/sensors/laser2d_floor/robots_filtered/humans_filtered', sensor_frame: '/robot$(arg robot_id)/laser2d_floor_link', obstacle_range: 20.0, raytrace_range: 21, inf_is_valid: true}
   
-obstacles_localized_laser:
+obstacles_3d:
   observation_sources: velodyne
-  velodyne: {data_type: LaserScan, clearing: true, marking: true, topic: '/robot$(arg robot_id)/localized_cloud/laser2d/robots_filtered/humans_filtered', sensor_frame: '/robot$(arg robot_id)/velodyne_link', obstacle_range: 20.0, raytrace_range: 21, inf_is_valid: true}
+  velodyne: {data_type: LaserScan, clearing: true, marking: true, topic: '/robot$(arg robot_id)/sensors/velodyne_points/laser2d/robots_filtered/humans_filtered', sensor_frame: '/robot$(arg robot_id)/velodyne_link', obstacle_range: 20.0, raytrace_range: 21, inf_is_valid: true}
   
