--- a/iliad_human_aware_navigation/config/object_layer_costmap_citi.yml
+++ b/iliad_human_aware_navigation/config/object_layer_costmap_citi.yml
@@ -9,7 +9,7 @@ update_frequency: 5.0
 plugins:
   - {name: static_map, type: "costmap_2d::StaticLayer"}
   - {name: obstacles_laser_floor, type: "costmap_2d::ObstacleLayer"}
-  - {name: obstacles_localized_laser, type: "costmap_2d::ObstacleLayer"}
+  - {name: obstacles_laser_top, type: "costmap_2d::ObstacleLayer"}
 
 static_map:
   track_unknown_space: true
@@ -19,9 +19,9 @@ static_map:
 
 obstacles_laser_floor:
   observation_sources: laserScanner
-  laserScanner: {data_type: LaserScan, clearing: true, marking: true, topic: '/robot$(arg robot_id)/sensors/laser2d_floor/robots_filtered/humans_filtered', sensor_frame: '/robot$(arg robot_id)/laser2d_floor_link', obstacle_range: 20.0, raytrace_range: 21, inf_is_valid: true}
+  laserScanner: {data_type: LaserScan, clearing: true, marking: true, topic: '/robot$(arg robot_id)/sensors/laser2d_floor/robots_filtered/humans_filtered', sensor_frame: '/robot$(arg robot_id)/laser2d_floor_link', obstacle_range: 6.0, raytrace_range: 66.5, inf_is_valid: true}
   
-obstacles_localized_laser:
+obstacles_laser_top:
   observation_sources: laserScanner
-  laserScanner: {data_type: LaserScan, clearing: true, marking: true, topic: '/robot$(arg robot_id)/localized_cloud/laser2d/robots_filtered/humans_filtered', sensor_frame: '/robot$(arg robot_id)/laser2d_top_link', obstacle_range: 20.0, raytrace_range: 21, inf_is_valid: true}
+  laserScanner: {data_type: LaserScan, clearing: true, marking: true, topic: '/robot$(arg robot_id)/sensors/laser2d_top/robots_filtered/humans_filtered', sensor_frame: '/robot$(arg robot_id)/laser2d_top_link', obstacle_range: 6.0, raytrace_range: 66.5, inf_is_valid: true}
   
